--- a/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
+++ b/src/main/webapp/WEB-INF/jsp/usr/common/head.jspf
@@ -20,9 +20,9 @@
 		
 		<div class="flex-grow"></div>
 		
-		<div class="menu-box items-center mr-6 text-4xl text-neutral-800">
+		<div class="items-center mr-6 text-4xl text-neutral-800">
 
-			<ul class="menu flex">
+			<ul class="menu_ flex">
 				<li class="hover:underline hover:text-neutral-400"><a class="block px-6" href="/">HOME</a></li>
 				<li class="hover:underline hover:text-neutral-400"><a class="block px-6" href="../article/list">LIST</a></li>
 				<c:if test="${!rq.isLogined() }">
@@ -45,6 +45,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 <!-- 제이쿼리 -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!-- 데이지 UI -->
+<link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
 
 </body>
 </html>
